# webgpu-wgpu-native

./: CMakeLists.txt
cmake/: webgpu.pc.in  webgpuConfig.cmake.in  webgpuTargets.cmake.in
include/webgpu/: webgpu.h  wgpu.h
